--- a/src/styles/Form.css
+++ b/src/styles/Form.css
@@ -12,9 +12,10 @@
 
 .submit-button{
     background-color: #e16162;
+    box-shadow: 2px 4px 5px 2px rgba(0, 0, 0, 0.25);
     color: #fff;
     border: none;
-    border-radius: 4px;
+    border-radius: 10px;
     padding: 0.5em 0.5em;
     margin-bottom: 1em;
     width: 50%;
