--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -1,43 +1,53 @@
-:root{
-    --textcolor: #fffffe;
+:root {
+  --textcolor: #fffffe;
 }
 
-.page-title{
-    font-size: 30px;
-    font-weight: bold;
-    color: #000;
-    margin: 1em auto 1em auto;
-    text-align: center;
-    color: var(--textcolor);
+.container {
+  height: 100vh;
+  background-image: url("../assets/filigrane.svg");
+  background-repeat: no-repeat;
+  background-size: 60%;
+  background-position: center;
 }
 
-.link{
-    color: var(--textcolor);
-    text-decoration: none;
-    font-weight: bold;
-    font-size: 0.8em;
-    margin: 1em auto;
+.page-title {
+  font-size: 30px;
+  font-weight: bold;
+  color: #000;
+  margin: 1em auto 1em auto;
+  text-align: center;
+  color: var(--textcolor);
 }
 
-.link:hover{
-    color: var(--textcolor);
-    text-decoration: underline;
+.link {
+  color: var(--textcolor);
+  text-decoration: none;
+  font-weight: bold;
+  font-size: 0.8em;
+  margin: 1em auto;
 }
 
-.section-title{
-    font-size: 20px;
-    font-weight: bold;
-    color: #000;
-    margin: 1em auto;
-    text-align: center;
-    color: var(--textcolor);
+.link:hover {
+  color: var(--textcolor);
+  text-decoration: underline;
 }
 
-.hrnet-form-container{
-    background-color: #abd1c6;
-    padding: 20px;
-    border-radius: 10px;
-    color: #fff;
-    width: 25%;
-    margin: 2em auto 1em auto;
+.section-title {
+  font-size: 20px;
+  font-weight: bold;
+  color: #000;
+  margin: 1em auto;
+  text-align: center;
+  color: var(--textcolor);
+}
+
+.hrnet-form-container {
+  background: rgba(171, 209, 198, 0.3);
+  box-shadow: 2px 8px 6px 5px rgba(0, 0, 0, 0.25);
+  backdrop-filter: blur(7.5px);
+  border-radius: 25px;
+  padding: 20px;
+  color: #fff;
+  width: 25%;
+  margin: 2em auto 1em auto;
 }
