bug sur le sort fix

--- a/src/styles/Employee.css
+++ b/src/styles/Employee.css
@@ -5,6 +5,7 @@
     background-image: url("../assets/filigrane_table.svg");
     background-repeat: no-repeat;
     background-position: bottom right;
+    color: white;
 }
 
 .container-data-table{
