--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -2,19 +2,20 @@
   --textcolor: #fffffe;
 }
 
-.container {
+.container{
   height: 100vh;
-  background-image: url("../assets/filigrane.svg");
+  padding-top: 3em;
+  background-image: url("../assets/filigrane_table.webp");
   background-repeat: no-repeat;
-  background-size: 60%;
-  background-position: center;
+  background-position: bottom right;
+  color: white;
 }
 
 .page-title {
   font-size: 30px;
   font-weight: bold;
   color: #000;
-  margin: 1em auto 1em auto;
+  margin: 1em auto 0.5em auto;
   text-align: center;
   color: var(--textcolor);
 }
@@ -36,7 +37,7 @@
   font-size: 20px;
   font-weight: bold;
   color: #000;
-  margin: 1em auto;
+  margin: 1.5em auto 1em auto;
   text-align: center;
   color: var(--textcolor);
 }
@@ -48,6 +49,6 @@
   border-radius: 25px;
   padding: 20px;
   color: #fff;
-  width: 25%;
+  width: 50%;
   margin: 2em auto 1em auto;
 }
